--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Lista de alumnos{% endblock %}
 {% block content %}
 
-
+<a href="{{ url_for('alumnos.create_alumno')}}" class="btn btn-success mb=3">Agregar Alumno</a>
 <br>
 <table class = "table table-bordered">
 <thead>
