--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Gestion de alumnos - Computo en nube 2</h1>
+        <h1 class="text-center">Alumnos TECNM</h1>
         <hr>
         <div class="container">
             {% block content %}{% endblock %}
